--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ categories = ["value-formatting", "no-std", "no-std::no-alloc"]
 description = "A double-to-string conversion algorithm based on Schubfach and yy"
 documentation = "https://docs.rs/zmij"
 edition = "2021"
-exclude = ["build.rs", "*.png", "chart/**"]
+exclude = ["build.rs", "*.png"]
 keywords = ["float"]
 license = "MIT"
 repository = "https://github.com/dtolnay/zmij"
